@@ -26,7 +26,6 @@ import org.springframework.security.web.authentication.logout.HttpStatusReturnin
 import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -78,25 +77,17 @@ public class SecurityConfiguration   {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        // Autorise toutes les origines (ajoutez votre frontend spécifique si nécessaire)
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList("http://localhost:4200", "https://forum-socialx.vercel.app"));  // Définir ici vos origines spécifiques si nécessaire
-
-        // Autorise tous les en-têtes
-        config.setAllowedHeaders(Arrays.asList("*"));
-
-        // Autorise toutes les méthodes HTTP
-        config.setAllowedMethods(Arrays.asList("*"));
-
-        // Applique la configuration CORS pour toutes les routes
+        config.setAllowedOrigins(List.of(
+                "https://forum-socialx.vercel.app", // Frontend autorisé
+                "http://localhost:4200"            // Ajouter localhost pour le développement local
+        ));
+        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        config.addAllowedMethod("*");
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
-         // Retourne un CorsFilter avec la configuration définie
     }
-
 
 
 
